--- a/app/assets/stylesheets/partials/dashboard/editor/_overview.sass
+++ b/app/assets/stylesheets/partials/dashboard/editor/_overview.sass
@@ -1,34 +1,37 @@
-app-project-overview section
-    &.hero
-        text-align: center
-        border-bottom: solid 1px #dadada
-        box-shadow: 0px 2px 6px -6px black
-        .image
-            display: inline-block
-            width: 120px
-            height: 120px
-            margin-bottom: 9px
-            box-shadow: 0px 0px 4px 0px black
-            border-radius: 100%
-            border: solid 0px black //TODO
-            overflow: hidden
-            img
-                width: inherit
-                height: inherit
-        .title
-            color: #2d2d2d
-            font-size: 1.7rem
-        .desc
-            margin-top: 5px
-            margin-bottom: 1rem
-            color: #5f5f5f
-    &.submission.modal-notice
-        margin: 3rem auto
-        width: 90% !important
-        max-width: 550px
-        padding: 2rem 1rem !important
-        #right
-            h2
-                font-size: 1.8rem
-            img
-                margin: 1rem 0 1.3rem 0
+app-project-overview
+    max-width: 800px
+    margin: 0 auto
+    section
+        &.hero
+            text-align: center
+            border-bottom: solid 1px #dadada
+            box-shadow: 0px 2px 6px -6px black
+            .image
+                display: inline-block
+                width: 120px
+                height: 120px
+                margin-bottom: 9px
+                box-shadow: 0px 0px 4px 0px black
+                border-radius: 100%
+                border: solid 0px black //TODO
+                overflow: hidden
+                img
+                    width: inherit
+                    height: inherit
+            .title
+                color: #2d2d2d
+                font-size: 1.7rem
+            .desc
+                margin-top: 5px
+                margin-bottom: 1rem
+                color: #5f5f5f
+        &.submission.modal-notice
+            margin: 3rem auto
+            width: 90% !important
+            max-width: 550px
+            padding: 2rem 1rem !important
+            #right
+                h2
+                    font-size: 1.8rem
+                img
+                    margin: 1rem 0 1.3rem 0
