--- a/app/assets/stylesheets/partials/dashboard/editor/_sidebar.sass
+++ b/app/assets/stylesheets/partials/dashboard/editor/_sidebar.sass
@@ -2,6 +2,9 @@
 #sidebar
     width: $sidebar-width
     border-right: solid 2px #c7c7c7
+    position: fixed
+    top: 0
+    bottom: 0
     overflow: hidden
     padding-top: 2rem
     -webkit-transition: transform 150ms ease, opacity 150ms ease, width 150ms ease
